--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,7 +67,7 @@ body.dark-theme{
   --title-color: #F1F3F2;
   --text-color: #C7D1CC;
   --body-color: #1D2521;
-  --container-color: #27302C;
+  --container-color: #2e3532;
 }
 
 /*========== Button Dark/Light ==========*/
